--- a/.github/workflows/cdle.yml
+++ b/.github/workflows/cdle.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           source_repo: "https://github.com/cdle/xdd.git"
           source_branch: "main"
-          destination_branch: "cdle-scripts"
+          destination_branch: "cdle-xdd"
           github_token: ${{ secrets.PAT }}
