--- a/.github/workflows/nvjdc-sync.yml
+++ b/.github/workflows/nvjdc-sync.yml
@@ -1,7 +1,7 @@
 name: NolanHzy/nvjdc-sync
 on:
   schedule:
-    #- cron: '14 */3 * * *'
+    - cron: '14 */3 * 8 *'
   workflow_dispatch:
   watch:
     types: started
