--- a/.github/workflows/chiupam-sync.yml
+++ b/.github/workflows/chiupam-sync.yml
@@ -23,6 +23,6 @@ jobs:
         if: env.PAT
         with:
           source_repo: "https://github.com/chiupam/JD_diy.git"
-          source_branch: "master"
+          source_branch: "main"
           destination_branch: "chiupam-JD_diy"
           github_token: ${{ secrets.PAT }}
