--- a/.github/workflows/chiupam-sync.yml
+++ b/.github/workflows/chiupam-sync.yml
@@ -22,7 +22,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/chiupam/JD_diy.git"
+          source_repo: "https://github.com/chiupam/JD_Diy.git"
           source_branch: "main"
           destination_branch: "chiupam-JD_diy"
           github_token: ${{ secrets.PAT }}
