--- a/.github/workflows/nolanark.yml
+++ b/.github/workflows/nolanark.yml
@@ -1,7 +1,7 @@
 name: NNNNolan-Ark-sync
 on:
   schedule:
-    - cron: '12 0,14 * * *'
+    #- cron: '12 0,14 * * *'
   workflow_dispatch:
   watch:
     types: started
