--- a/.github/workflows/didi_fruit.yml
+++ b/.github/workflows/didi_fruit.yml
@@ -1,7 +1,7 @@
 name: didi_fruit-sync
 on:
   schedule:
-    - cron: '12 2,12,18 * * *'
+    #- cron: '12 2,12,18 * * *'
   workflow_dispatch:
   watch:
     types: started
