--- a/.github/workflows/chiupam-sync.yml
+++ b/.github/workflows/chiupam-sync.yml
@@ -1,7 +1,7 @@
 name: chiupam-sync
 on:
   schedule:
-    - cron: '6 5,12,20 * * *'
+    #- cron: '6 5,12,20 * * *'
   workflow_dispatch:
   watch:
     types: started
