--- a/.github/workflows/msechen.yml
+++ b/.github/workflows/msechen.yml
@@ -1,7 +1,7 @@
 name: msechen-sync
 on:
   schedule:
-    - cron: '12 6-23/4 * * *'
+    #- cron: '12 6-23/4 * * *'
   workflow_dispatch:
   watch:
     types: started
