--- a/.github/workflows/SuMaiKaDe.yml
+++ b/.github/workflows/SuMaiKaDe.yml
@@ -1,7 +1,7 @@
 name: SuMaiKaDe-sync
 on:
   schedule:
-    - cron: '11 0-23/4 * * *'
+    #- cron: '11 0-23/4 * * *'
   workflow_dispatch:
   watch:
     types: started
