--- a/.github/workflows/walle1798.yml
+++ b/.github/workflows/walle1798.yml
@@ -1,7 +1,7 @@
 name: walle1798-sync
 on:
   schedule:
-    - cron: '1 6-23/4 * * *'
+    #- cron: '1 6-23/4 * * *'
   workflow_dispatch:
   watch:
     types: started
